--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>嗖嗖Siu</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
+
+    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" sizes="any">
+    <link rel="icon" href="/img/favicon.png" type="image/png" sizes="32x32">
 
     <script src="./js/geo-weather-bar.js"></script>
     <script src="./js/flipper-clock.js" defer></script>
