--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./js/geo-weather-bar.js"></script>
     <script src="./js/flipper-clock.js" defer></script>
     <script src="./js/search-bar.js" defer></script>
+    <script src="./js/search-enhance.js" defer></script>
     <script src="./js/paper-plane.js" defer></script>
 </head>
 
@@ -23,9 +24,7 @@
 
         <geo-weather-bar></geo-weather-bar>
 
-        <div style='display:flex;justify-content: center; align-items: center; gap:5px' class="yiyan">Hello
-            <b>World</b>!
-        </div>
+        <div class="greeting">Hello<b>World</b>!</div>
 
         <search-bar default-engine="bing"></search-bar>
 
