--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="greeting">Hello<b>World</b>!</div>
 
-        <search-bar default-engine="bing"></search-bar>
+        <search-bar default-engine="baidu"></search-bar>
 
 
 
