allow user to use ArrowKey to select suggestions and change the theme of flipper clock according to user's color preference

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <script src="./js/geo-weather-bar.js"></script>
     <script src="./js/flipper-clock.js" defer></script>
     <script src="./js/search-bar.js" defer></script>
-    <script src="./js/search-enhance.js" defer></script>
+    <script src="./js/global.js" defer></script>
     <script src="./js/paper-plane.js" defer></script>
 </head>
 
 <body>
     <div class="content">
-        <flipper-clock></flipper-clock>
+        <flipper-clock theme="light"></flipper-clock>
 
         <geo-weather-bar></geo-weather-bar>
 
