add localstorage to memorize user's last engine choice

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" sizes="any">
     <link rel="icon" href="/img/favicon.png" type="image/png" sizes="32x32">
 
+    <script src="./js/local-storage.js" defer></script>
     <script src="./js/geo-weather-bar.js"></script>
     <script src="./js/flipper-clock.js" defer></script>
     <script src="./js/search-bar.js" defer></script>
